# simple-game-2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: circle.cpp  circle.hpp  circlemanager.cpp  circlemanager.hpp  mathuntils.cpp  mathuntils.hpp  mathutils.cpp  mathutils.hpp
